--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Personal Portfolio</title>
+    <title>Jay Haynes</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
@@ -12,9 +12,9 @@
       <div class="row">
         <h1 class="col-sm-6">Jay Haynes</h1>
         <nav class="col-sm-6 text right">
-          <a href="about.html">About Me</a>
-          <a href="education.html">Education</a>
-          <a href="experience.html">Experience</a>
+          <a href="index.html">About Me</a>
+          <a href="index.html">Education</a>
+          <a href="index.html">Experience</a>
         </nav>
       </div>
     </header>
