added links, changed jumbotron text color

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <footer class="container">
       <div class="row">
         <p class="col-sm-4">&copy; 2021 Jay-Haynes</p>
-        <div class="col-sm-3"><a href=#>Github</a></div>
-        <div class="col-sm-3"><a href=#>LinkedIn</a></div>
+        <div class="col-sm-3"><a href='https://github.com/jwhaynes'>Github</a></div>
+        <div class="col-sm-3"><a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn</a></div>
       </div>
     </footer>
   </body>
