changed nav bar, removed footer, added tictactoe content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Jay Haynes</title>
-    <meta charset="utf-8" />
+    <meta name="viewport" charset="utf-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <link href="style.css" type="text/css" rel="stylesheet">
@@ -12,23 +12,38 @@
       <div class="row">
         <h1 class="col-sm-6">Jay Haynes</h1>
         <nav class="col-sm-6 text right">
-          <a href="index.html">About Me</a>
-          <a href="index.html">Education</a>
-          <a href="index.html">Experience</a>
+          <a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn</a>
+          <a href='https://github.com/jwhaynes'>Github</a>
         </nav>
       </div>
     </header>
     <section class="jumbotron">
       <div class="container">
-        <h2>Biological Sciences</h2>
+        <h2>Scientist</h2>
         <h3>Python | HTML/CSS | MatLab</h3>
+      </div>
+    </section>
+    <section class ="main">
+      <div class="container">
+        <p>
+          Hello, my name is Jay and I'm a sceintist with an enthusiasm for nature an interest in using biology to <em>solve problems</em>. 
+          For more info on my work experience and lab skills checkout my <a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn Profile</a>. 
+          To see what coding projects I'm working on, checkout my <a href='https://github.com/jwhaynes'>Github Profile</a> and project links below.
+        </p>
+        <h4>TicTacToe</h4>
+        <p>This is a fun project I put together to practice using object oriented programming concepts such as classes, objects, and others.
+          You can play with a friend or try and best the computer player!
+        </p>
+        <p><a href='https://github.com/jwhaynes/tic_tac_toe'>Check it out</a></p>
+        <img src="./assets/tictactoe_screenshot.png" alt="Screenshot of tictactoe in action!">
+        <h4>More to come...</h4>
       </div>
     </section>
     <footer class="container">
       <div class="row">
-        <p class="col-sm-4">&copy; 2021 Jay-Haynes</p>
-        <div class="col-sm-3"><a href='https://github.com/jwhaynes'>Github</a></div>
-        <div class="col-sm-3"><a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn</a></div>
+        <p class="col-sm-4"></p>
+        <div class="col-sm-3"><a href=></a></div>
+        <div class="col-sm-3"><a href=></a></div>
       </div>
     </footer>
   </body>
