revised about me paragraph

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <p>
           Hello, my name is Jay and I'm a sceintist with an enthusiasm for nature an interest in using biology to <em>solve problems</em>. 
-          For more info on my work experience and lab skills checkout my <a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn Profile</a>. 
+          I like to explore programming tools to assist in experimental work and for the fun/challenge. For more info on my work experience and lab skills checkout my <a href='https://www.linkedin.com/in/jay-haynes/'>LinkedIn Profile</a>. 
           To see what coding projects I'm working on, checkout my <a href='https://github.com/jwhaynes'>Github Profile</a> and project links below.
         </p>
         <h4>TicTacToe</h4>
