adjusted text under tictactoe

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           To see what coding projects I'm working on, checkout my <a href='https://github.com/jwhaynes'>Github Profile</a> and project links below.
         </p>
         <h4>TicTacToe</h4>
-        <p>This is a fun project I put together to practice using object oriented programming concepts such as classes, objects, and others.
-          You can play with a friend or try and best the computer player!
+        <p>This is a fun app project I put together to practice using object oriented programming concepts such as classes, objects, and others.
+          I used python and the tkinter package in the python standard library. You can play with a friend or try and best the computer player!
         </p>
         <p><a href='https://github.com/jwhaynes/tic_tac_toe'>Check it out</a></p>
         <img src="./assets/tictactoe_screenshot.png" alt="Screenshot of tictactoe in action!">
